--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -8,7 +8,7 @@
   background-position: center;
 
   width: 100%;
-  height: 730px;
+  height: 820px;
   @media only screen and (max-width: $mobile) {
     min-height: 100vh;
     min-height: -webkit-fill-available;
@@ -69,10 +69,13 @@
     }
 
     h1 {
-      padding: 30px 0 20px 10px;
+      padding: 30px 0 50px 10px;
       line-height: 1.2;
       font-size: 55px;
       max-width: 800px;
+      @media only screen and (max-width: 720px) {
+        font-size: 46px;
+      }
       @media only screen and (max-width: $mobile) {
         text-align: center;
         margin: 75px 0;
