--- a/src/styles/_questionnaire.scss
+++ b/src/styles/_questionnaire.scss
@@ -149,6 +149,11 @@
     cursor: pointer;
     border: 2px solid $secondaryColor;
     transition: 0.3s;
+    @media only screen and (max-width: $mobile) {
+      height: 45px;
+      width: 45px;
+      margin-top: 6px;
+    }  
     &:hover {
       background-color: $secondaryColor;
       .icon {
