--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,7 +11,7 @@ $fontColor: #333;
 $borderRadius: 10px;
 
 $tablet: 1024px;
-$mobile: 620px;
+$mobile: 780px;
 $hero-img: url('/src/assets/heroImgCompressed.jpg');
 
 $bg-image1: url('../assets/social-bg-1.jpg');
